:sparkles: Introducing new features.支持时区选择

--- a/xxl-job-admin/src/main/resources/application.properties
+++ b/xxl-job-admin/src/main/resources/application.properties
@@ -30,10 +30,9 @@ spring.datasource.tomcat.validation-query=SELECT 1
 spring.datasource.tomcat.validation-interval=30000
 
 ### xxl-job email
-spring.mail.host=smtp.qq.com
-spring.mail.port=25
-spring.mail.username=xxx@qq.com
-spring.mail.password=xxx
+spring.mail.host=smtp.163.com
+spring.mail.username=crossoverjie@163.com
+spring.mail.password=qwerasdfzxcv1234
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
