--- a/xxl-job-admin/src/main/resources/tz.properties
+++ b/xxl-job-admin/src/main/resources/tz.properties
@@ -1,3 +1,3 @@
 # 时区配置
 # 墨尔本和 UTC-8（大陆时间） 相差两个小时
-tz.value=[{"between":"-0","name":"beijing","zhName":"北京"},{"between":"-2","name":"melb","zhName":"墨尔本"},{"between":"-3","name":"syd","zhName":"悉尼"}]
+tz.value=[{"name":"Australia/Sydney","zhName":"堪培拉,墨尔本,悉尼(UTC+10:00)"},{"name":"Asia/Shanghai","zhName":"北京,重庆,香港特别行政区,乌鲁木齐(UTC+08:00)"},{"name":"Asia/Tokyo","zhName":"大阪,札幌,东京(UTC+09:00)"}]
