--- a/xxl-job-admin/src/main/resources/application.properties
+++ b/xxl-job-admin/src/main/resources/application.properties
@@ -43,3 +43,9 @@ xxl.job.accessToken=
 
 ### xxl-job, i18n (default empty as chinese, "en" as english)
 xxl.job.i18n=
+
+### alarm robot
+alarm.robot.url = /xxx/xxx
+alarm.robot.accessKey = abc
+alarm.robot.secretKey = abc
+alarm.robot.domain = https://xxx/
