支持企业微信

--- a/xxl-job-admin/src/main/resources/application.properties
+++ b/xxl-job-admin/src/main/resources/application.properties
@@ -45,7 +45,7 @@ xxl.job.accessToken=
 xxl.job.i18n=
 
 ### alarm robot
-alarm.robot.url = /api/cron/v1/alarm/debug?flag=1
-alarm.robot.accessKey = 2b635a6999aa481c
-alarm.robot.secretKey = 83ac0a9897284e708750a4c1e946f98d
-alarm.robot.domain = https://www.melbsc.com.au
+alarm.robot.url = /xxx/xxx
+alarm.robot.accessKey = abc
+alarm.robot.secretKey = abc
+alarm.robot.domain = https://xxx/
