--- a/xxl-job-admin/src/main/resources/application.properties
+++ b/xxl-job-admin/src/main/resources/application.properties
@@ -49,3 +49,6 @@ alarm.robot.url = /xxx/xxx
 alarm.robot.accessKey = abc
 alarm.robot.secretKey = abc
 alarm.robot.domain = https://xxx/
+
+# 区分环境
+server.env = test
